t+sco:[[bowk]] ([[WT:EDIT|Assisted]]) <vomit#50571722>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -115,6 +115,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Romansch: {{t|rm|render}}, {{t|rm|vomitar}}
 * Russian: {{t+|ru|блева́ть|impf}}, {{t+|ru|рвать|impf}} {{qualifier|impersonal}}, {{t+|ru|тошни́ть|impf}} {{qualifier|impersonal, to feel sick}}, {{t+|ru|рыга́ть|impf}}
 * S'gaw Karen: {{t|ksw|ဘှိး}}
+* Scots: {{t|sco|bowk}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|ри̏гати|impf}}, {{t|sh|збљувати|pf}}, {{t|sh|повра́тити|pf}}, {{t|sh|бљу̀вати|impf}}, {{t|sh|по̀враћати|impf}}
 *: Roman: {{t+|sh|rȉgati|impf}}, {{t|sh|zbljuvati|pf}}, {{t+|sh|povrátiti|pf}}, {{t+|sh|bljùvati|impf}}, {{t+|sh|pòvraćati|impf}}
