--- a/en/c/chosen.6834.wikitext
+++ b/en/c/chosen.6834.wikitext
@@ -16,8 +16,8 @@
 ===Adjective===
 {{en-adj}}
 
-# Picked; selected
-# Elected
+# [[picked]]; [[selected]]
+# [[elected]]
 
 =====Translations=====
 {{trans-top|picked}}
