--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -30,6 +30,11 @@ From {{etyl|la|en}} {{m|la|et cētera||and the [[other]] [[thing]]s; and the [[r
 ====Translations====
 {{trans-see|noting the omission of the remainder of a list|etc.|and so forth}}
 
+===Noun===
+{{en-noun|head=et cetera}}
+
+# Something in addition, which can easily be understood.
+
 [[Category:English coordinates]]
 
 ----
