--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -18,11 +18,11 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 # An [[organ]] in animals that stores food in the process of [[digestion]].
 # {{lb|en|informal}} The [[belly]].
 # {{lb|en|uncountable|obsolete}} [[pride|Pride]], [[haughtiness]].
-#* '''1590''', Edmund Spenser, ''The Faerie Queene'', II.vii:
+#* '''1590''', {{w|Edmund Spenser}}, ''{{w|The Faerie Queene}}'', II.vii:
 #*: Sterne was his looke, and full of '''stomacke''' vaine, / His portaunce terrible, and stature tall&nbsp;[…].
 #* '''1613''', {{w|William Shakespeare}}, ''[[s: The Life of King Henry the Eighth|The Life of King Henry the Eighth]]'', IV. ii. 34:
 #*: He was a man / Of an unbounded '''stomach''', ever ranking / Himself with princes;
-#* John Locke
+#* {{rfdate|and other bibliographic particulars, eg, title of work, page, url, full name of author}} {{w|John Locke}}
 #*: This sort of crying proceeding from pride, obstinacy, and '''stomach''', the will, where the fault lies, must be bent.
 # {{lb|en|obsolete}} [[appetite|Appetite]].
 #: ''a good '''stomach''' for roast beef''
