/* Readings */ Readings update, bogus kun <昩#50596355>

--- a/en/昩/昩.16977.wikitext
+++ b/en/昩/昩.16977.wikitext
@@ -42,4 +42,8 @@
 # {{defn|lang=ja|sort=日05}}
 
 ====Readings====
-{{ja-readings|on=[[ばつ]] (batsu), [[まち]] (machi)|kun=[[くもる]] (kumoru), [[ほし]] (hoshi)}}
+{{ja-readings
+|goon=まち
+|kanon=ばつ
+|kun=くら-い
+}}
