--- a/en/旱/旱.16921.wikitext
+++ b/en/旱/旱.16921.wikitext
@@ -22,6 +22,7 @@
 |h=pfs=hôn
 |mn=qz:ǒaⁿ/tw,xm,zz:ōaⁿ/tw,xm,zz:hōaⁿ/hān
 |mn_note=ǒaⁿ/ōaⁿ/hōaⁿ - vernacular; hān - literary
+|mn-t=uan6
 |mc=y
 |oc=y
 |ma=y
