--- a/en/坪/坪.13037.wikitext
+++ b/en/坪/坪.13037.wikitext
@@ -40,7 +40,7 @@
 * {{qualifier|Min Nan}} {{thcwd|3717}}
 
 ===Compounds===
-{{zh-der|坪數|坪場|地坪|停機坪|坪林|坪壩|建坪|阿坶坪|草坪|馬坪|卸甲坪|方高坪|薛坪|長坪|龍坪|寺坪|洋坪|茅坪場|樟村坪}}
+{{zh-der|坪數|坪場|地坪|停機坪|坪林|坪壩|建坪|阿坶坪|草坪|馬坪|卸甲坪|方高坪|薛坪|長坪|龍坪|寺坪|洋坪|茅坪場|樟村坪|松木坪}}
 
 ----
 
