--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -123,7 +123,7 @@
 *: Upper Sorbian: {{t|hsb|Zjednoćene kralestwo}}
 * Spanish: {{t+|es|Reino Unido|m}}, {{t|es|Reino Unido de Gran Bretaña e Irlanda del Norte|m}}
 * Swahili: {{t|sw|Ufalme wa Muungano}}
-* Swedish: {{t+|sv|Förenade kungariket}}; {{qualifier|colloquially:}} {{t+|sv|England}}
+* Swedish: {{t+|sv|Förenade kungariket}}; {{t+|sv|Storbritannien}} {{q|colloquially}}; {{t+|sv|England}} {{q|colloquially}}
 * Tagalog: {{t|tl|Nagkakaisang Kaharian}}
 * Tajik: {{t+|tg|Подшоҳии Муттаҳида}}
 * Tamil: {{t+|ta|ஐக்கிய இராச்சியம்}}
