--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -49,7 +49,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Japanese: {{t+|ja|ブロンド|tr=burondo}}, {{t+|ja|金髪|tr=きんぱつ, kinpatsu}} {{qualifier|blond hair}}
 {{trans-mid}}
 * Korean: {{t|ko|금발인}}, {{t+|ko|금발}} {{qualifier|blond hair}}
-* Latin: {{t+|la|flāvus|m}}, {{t|la|flāvicomus|m}}, {{t+|la|fulvus|m}}
+* Latin: {{t+|la|flāvus|m}}, {{t|la|flāvicomus|m}}, {{t+|la|fulvus|m}}, {{t|la|flava|f}}
 * Latvian: {{t|lv|gaišmatis|m}}, {{t|lv|gaišmate|f}}, {{t|lv|blondīns|m}}, {{t|lv|blondīne|f}}
 * Macedonian: {{t|mk|ру́сокос|m}}, {{t|mk|плав|m}}, {{t|mk|русо́коса|f}}, {{t|mk|пла́ва|f}}
 * Mongolian: {{t|mn|[[цайвар]] [[үс|үстэй]] [[хүн]]}}
