--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -337,7 +337,7 @@ From {{der|en|fro|porter}}, from {{der|en|la|portāre||carry}}. Akin to {{m|en|t
 #* {{quote-book|passage=They are easily '''ported''' by boat into other shires.|author=[[w:Thomas Fuller|Fuller]]|title=The History of the Worthies of England}}
 # {{lb|en|military}} To hold or carry (a weapon) with both hands so that it lays diagonally across the front of the body, with the barrel or similar part near the left shoulder and the right hand grasping the small of the stock; or, to throw (the weapon) into this position on command.
 #: {{ux|en|'''Port''' arms!}}
-#* {{quote-book|passage={{...}} the angelic squadron...began to hem him round with '''ported''' spears.|author=[[w:John Milton|Milton]]|title=[[w:Paradise Lost|Paradise Lost]]|year=1667|volume_plain=book IV}}
+#* {{quote-book|passage={{...}} the angelic squadron...began to hem him round with '''ported''' spears.| author={{w|John Milton}}| title={{w|Paradise Lost}}|year=1667| volume_plain=book IV}}
 # {{lb|en|computing|video games}} To adapt, modify, or create a new version of, a program so that it works on a different platform. {{pedialite|Porting|Porting (computing)}}
 # {{lb|en|telephony}} To carry or transfer an existing telephone number from one telephone service provider to another.
 # {{lb|en|US|government|and|law}} To transfer a voucher or subsidy from one jurisdiction to another.
