--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -22,10 +22,10 @@
 # The part of a [[dress]] or [[robe]], etc., that hangs below the [[waist]].
 #* '''1885''', {{w|Ada S. Ballin}}, ''The Science of Dress in Theory and Practice'', Chapter XI:
 #*: The petticoats and '''skirts''' ordinarily worn are decidedly the heaviest part of the dress ; hence it is necessary that some reform should be effected in these.
-#* '''1891''', Arthur Conan Doyle, ''The Red-Headed League''
+#* '''1891''', {{w|Arthur Conan Doyle}}, ''The Red-Headed League''
 #*: “It's all clear,” he whispered. “Have you the chisel and the bags? Great Scott! Jump, Archie, jump, and I'll swing for it!”<br>Sherlock Holmes had sprung out and seized the intruder by the collar. The other dived down the hole, and I heard the sound of rending cloth as Jones clutched at his '''skirts'''.
 # A loose edging to any part of a dress.
-#* Addison
+#* {{rfdate|and other bibliographic particulars, eg, title of work, page, url, full name of author}} {{w|Addison}}
 #*: A narrow lace, or a small '''skirt''' of ruffled linen, which runs along the upper part of the stays before, and crosses the breast, being a part of the tucker, is called the modesty piece.
 # A [[petticoat]].
 # {{lb|en|pejorative|slang}} A woman.
