--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -277,7 +277,7 @@
 |title=[http://www.economist.com/news/technology-quarterly/21578516-transport-new-train-technologies-are-less-visible-and-spread-less-quickly Ideas coming down the track]
 |passage=A “moving platform” scheme{{...}}is more technologically ambitious than maglev trains even though it relies on conventional rails. Local trains would use side-by-side rails to roll alongside intercity trains and allow passengers to switch trains by stepping through docking bays. [&hellip;] This would also let high-speed trains '''skirt''' cities as moving platforms ferry passengers to and from the city centre.}}
 # To cover with a skirt; to surround.
-#* Milton
+#* {{rfdate|and other bibliographic particulars, eg, title of work, page, url}} {{w|John Milton}}
 #*: '''skirted''' his loins and thighs with downy gold
 # To avoid or ignore (something); to manage to avoid (something or a problem); to [[skate by]] (something).
 #: ''He '''skirted''' the whole issue by not being on Twitter in the first place.''
