t+mi:[[waiwaiā]] t+mi:[[pīwari]] t+mi:[[hūmārie]] t+mi:[[hūmārire]] t+mi:[[purotu]] t+mi:[[rerehua]] t+mi:[[tau]] t+mi:[[ātanga]] t+mi:[[ātaahua]] t+mi:[[paruhi]] ([[WT:EDIT|Assisted]]) <beautiful#50618691>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -129,6 +129,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Lü: {{t|khb|ᦇᦱᧄ|sc=Talu}}
 * Macedonian: {{t|mk|убав}}, {{t|mk|прекрасен}}
 * Malay: {{t|ms|cantik}}, {{t|ms|indah}}, {{t|ms|molek}}
+* Maori: {{t|mi|waiwaiā }}, {{t|mi|pīwari }}, {{t|mi|hūmārie }}, {{t|mi|hūmārire }}, {{t|mi|purotu }}, {{t|mi|rerehua }}, {{t+|mi|tau }}, {{t|mi|ātanga }}, {{t|mi|ātaahua }}
 * Mazanderani: {{t|mzn|قشنگ}}, {{t|mzn|خجیر}}
 * Mongolian: {{t+|mn|сайхан|sc=Cyrl}}, {{t+|mn|гуа}}
 * Navajo: {{t|nv|nizhóní}}, {{t|nv|nizhóní yeeʼ}}
@@ -214,6 +215,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Limburgish: {{t|li|sjoen}}
 * Macedonian: {{t|mk|убаво|n}}
 * Malay: {{t|ms|indah}}
+* Maori: {{t|mi|paruhi }}
 * Portuguese: {{t+|pt|limpo}}
 * Spanish: {{t+|es|bueno}}, {{t+|es|despejado}}, {{t+|es|alegre}}
 * Swedish: {{t+|sv|fint|n}}, {{t+|sv|vackert|n}}
