--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -443,7 +443,7 @@ The meaning of ''semen or female ejaculatory discharge'' is considered rude slan
 # An [[exclamation]] to express [[encouragement]], or to precede a request.
 #: {{ux|en|'''Come come'''! You can do it.&emsp; '''Come''' now! It won't bite you.}}
 #* {{RQ:Frgsn Zlnstn|I}}
-#*: “I'm through with all pawn-games,” I laughed. “'''Come''', let us have a game of lansquenet. Either I will take a farewell fall out of you or you will have your sevenfold revenge”.
+#*: “I'm through with all pawn-games,” I laughed. “'''Come''', let us have a game of lansquenet. Either I will take a farewell fall out of you or you will have your sevenfold revenge and u found meh hehehehe”
 
 ===Etymology 2===
 See {{m|en|comma}}.
