/* Proper noun */Added quote-web template. <Germany#50625791>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -15,8 +15,7 @@ From {{etyl|enm|en}} {{m|enm|Germanie}}, from {{etyl|ang|en}} {{m|ang|Germania}}
 {{en-proper noun|~|Germanies|Germanys}}
 
 # {{senseid|en|Q183}}{{lb|en|geography}} The [[Central Europe]]an [[state]] [[form]]ed by [[West Germany]]'s 1990 [[absorption]] of [[East Germany]], with its [[capital]] in [[Berlin]].
-#* '''2014 September 25''', Michael Heise, "[http://online.wsj.com/articles/the-myth-of-the-stupid-german-investor-1411668084 The Myth of the Stupid German Investor]" in the ''Wall Street Journal'':
-#*: Germans save a lot, produce plenty and spend little. The result is a massive external surplus. Last year, '''Germany'''’s current account surplus stood at almost [[€]]200 billion ([[USD|$]]260 billion), the world's largest.
+#* {{quote-web|year=2014|month=September|author=Michael Heise|url=http://online.wsj.com/articles/the-myth-of-the-stupid-german-investor-1411668084|title=The Myth of the Stupid German Investor|work=The Wall Street Journal|passage=Germans save a lot, produce plenty and spend little. The result is a massive external surplus. Last year, '''Germany'''’s current account surplus stood at almost [[€]]200 billion ([[USD|$]]260 billion), the world's largest.}}
 #* '''2014 July 14''', Sam Bordenjuly, "[http://www.nytimes.com/2014/07/14/sports/worldcup/world-cup-2014-germany-defeats-argentina-in-final.html Germans End Long Wait: 24 Years and a Bit Extra]" in ''The New York Times'':
 #*: The win made Germany the first European team to prevail in a World Cup in the Americas and gave the Germans, who have made it to the knockout stage in 16 consecutive World Cups, their first trophy since 1990.
 # {{lb|en|geography|historical}} The [[Central Europe]]an [[state]] [[form]]ed by [[Prussia]] in 1871 or its [[successor]] [[state]]s, with their [[capital]]s in [[Berlin]].
