--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -18,9 +18,7 @@ From {{etyl|enm|en}} {{m|enm|Germanie}}, from {{etyl|ang|en}} {{m|ang|Germania}}
 #* {{quote-web|year=2014|month=September|author=Michael Heise|url=http://online.wsj.com/articles/the-myth-of-the-stupid-german-investor-1411668084|title=The Myth of the Stupid German Investor|work=The Wall Street Journal|passage=Germans save a lot, produce plenty and spend little. The result is a massive external surplus. Last year, '''Germany'''’s current account surplus stood at almost [[€]]200 billion ([[USD|$]]260 billion), the world's largest.}}
 #* {{quote-web|year=2014|month=July|author=Sam Bordenjuly|url=http://www.nytimes.com/2014/07/14/sports/worldcup/world-cup-2014-germany-defeats-argentina-in-final.html|title=Germans End Long Wait: 24 Years and a Bit Extra|work=The New York Times|passage=The win made Germany the first European team to prevail in a World Cup in the Americas and gave the Germans, who have made it to the knockout stage in 16 consecutive World Cups, their first trophy since 1990.}}
 # {{lb|en|geography|historical}} The [[Central Europe]]an [[state]] [[form]]ed by [[Prussia]] in 1871 or its [[successor]] [[state]]s, with their [[capital]]s in [[Berlin]].
-====•====
-#* '''1996''', Paul Bookbinder, ''Weimar '''Germany''': the republic of the reasonable'' {{ISBN|0719042879}}, page 90:
-#*: Severing's belief that trade union workers were the most progressive and democratic element in '''Germany''' holds up well under investigation.
+#* {{quote-book|year=1996|author=Paul Bookbinder|title=Weimar Germany: the republic of the reasonable|ISBN=0719042879|page=90|passage=Severing's belief that trade union workers were the most progressive and democratic element in '''Germany''' holds up well under investigation.}}
 # {{lb|en|geography|historical}} A [[nominal]] [[medieval]] [[kingdom]] in [[Central Europe]] [[form]]ing a [[region]] of the [[Carolingian]] and [[Holy Roman Empire|Holy Roman]] [[empire]]s, with [[various]] [[capital]]s; by [[extension]], the [[Holy Roman Empire]] [[itself]], the [[empire]] of the [[Austria]]n [[Habsburg]]s.
 #* '''17th c.''', ''A Military History of Germany; and of England. From the Year 1631 to the Year 1648. Being the Memoirs of an English Gentleman, who served in the army of Gustavus Adolphus; and afterwards in the Royal Army of King Charles I'' (1759), [http://books.google.com/books?id=1JlBAAAAcAAJ&pg=PA33 page 33]:
 #*: There had been a long bloody war in the empire of '''Germany''' for twelve years, between the Emperor, the Duke of [[Bavaria]], the King of [[Spain]], and the [[popish|Popiſh]] Princes and Electors, on the one side; and the [[Protestant|Proteſtant]] Princes on the other; and both [[side|ſides]] having been [[exhausted|exhauſted]] by the war, and even the [[Catholics|Catholicks]] [[themselves|themſelves]] beginning to [[dislike|diſlike]] the growing power of the [[house|houſe]] of [[Austria|Auſtria]], it was thought that all parties were willing to make peace.
