--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -14,16 +14,14 @@ From {{etyl|enm|en}} {{m|enm|Germanie}}, from {{etyl|ang|en}} {{m|ang|Germania}}
 ===Proper noun===
 {{en-proper noun|~|Germanies|Germanys}}
 
-
-
 # {{senseid|en|Q183}}{{lb|en|geography}} The [[Central Europe]]an [[state]] [[form]]ed by [[West Germany]]'s 1990 [[absorption]] of [[East Germany]], with its [[capital]] in [[Berlin]].
 #* {{quote-web|year=2014|month=September|author=Michael Heise|url=http://online.wsj.com/articles/the-myth-of-the-stupid-german-investor-1411668084|title=The Myth of the Stupid German Investor|work=The Wall Street Journal|passage=Germans save a lot, produce plenty and spend little. The result is a massive external surplus. Last year, '''Germany'''’s current account surplus stood at almost [[€]]200 billion ([[USD|$]]260 billion), the world's largest.}}
 #* {{quote-web|year=2014|month=July|author=Sam Bordenjuly|url=http://www.nytimes.com/2014/07/14/sports/worldcup/world-cup-2014-germany-defeats-argentina-in-final.html|title=Germans End Long Wait: 24 Years and a Bit Extra|work=The New York Times|passage=The win made Germany the first European team to prevail in a World Cup in the Americas and gave the Germans, who have made it to the knockout stage in 16 consecutive World Cups, their first trophy since 1990.}}
 # {{lb|en|geography|historical}} The [[Central Europe]]an [[state]] [[form]]ed by [[Prussia]] in 1871 or its [[successor]] [[state]]s, with their [[capital]]s in [[Berlin]].
 #* {{quote-book|year=1996|author=Paul Bookbinder|title=Weimar Germany: the republic of the reasonable|ISBN=0719042879|page=90|passage=Severing's belief that trade union workers were the most progressive and democratic element in '''Germany''' holds up well under investigation.}}
 # {{lb|en|geography|historical}} A [[nominal]] [[medieval]] [[kingdom]] in [[Central Europe]] [[form]]ing a [[region]] of the [[Carolingian]] and [[Holy Roman Empire|Holy Roman]] [[empire]]s, with [[various]] [[capital]]s; by [[extension]], the [[Holy Roman Empire]] [[itself]], the [[empire]] of the [[Austria]]n [[Habsburg]]s.
-#*{{quote-book|year=1759|title=A Military History of Germany; and of England. From the Year 1631 to the Year 1648. Being the Memoirs of an English Gentleman, who served in the army of Gustavus Adolphus; and afterwards in the Royal Army of King Charles I (1759)|url=http://books.google.com/books?id=1JlBAAAAcAAJ&pg=PA33|page=33|passage=There had been a long bloody war in the empire of '''Germany''' for twelve years, between the Emperor, the Duke of [[Bavaria]], the King of [[Spain]], and the [[popish|Popiſh]] Princes and Electors, on the one side; and the [[Protestant|Proteſtant]] Princes on the other; and both [[side|ſides]] having been [[exhausted|exhauſted]] by the war, and even the [[Catholics|Catholicks]] [[themselves|themſelves]] beginning to [[dislike|diſlike]] the growing power of the [[house|houſe]] of [[Austria|Auſtria]], it was thought that all parties were willing to make peace.}}
-#* {{quote-text|year=1790|author=Thomas B. Clarke|title=A Statistical View of Germany, in respect to the Imperial and Territorial Constitutions, Forms of Government, Legislation, Administration of Justice, and Ecclesiastical State|page=13|url=http://books.google.com/books?id=SY1LAAAAcAAJ&pg=PA13|passage=When the race of Charlemagne [[cease|ceaſed]] to govern in '''Germany''', the princes and [[state|ﬅate]]s [[associate|aſſociated]] to continue the empire; and that its [[majesty|majeﬅy]] might be [[visible|viſible]], and its laws enforced, they agreed to [[choose|chooſe]] an emperor. From this emperor, all electors and princes, except [[those|thoſe]] before 1582, receive [[investiture|inveﬅiture]] of their dominions; counts and free cities from the {{w|Aulic council}}. But this [[investiture|inveﬅiture]] is no more than a [[sign|ſign]] of [[submission|ſubmiſſion]] to the [[majesty|majeﬅy]] of the empire, which is [[deposit|depoſited]] in the emperor. For as the [[constitute|conﬅituted]] members of the empire are dependent on that collective union from which they derive protection, they therefore [[shew|ſhew]] this dependence on the emperor, [[because|becauſe]] he [[represent|repreſents]] the [[majesty|majeﬅy]] of that union, or of the empire; but in all other [[respect|reſpects]] they are independent and free.}}
+#* {{quote-book|year=1759|title=A Military History of Germany; and of England. From the Year 1631 to the Year 1648. Being the Memoirs of an English Gentleman, who served in the army of Gustavus Adolphus; and afterwards in the Royal Army of King Charles I (1759)|url=http://books.google.com/books?id=1JlBAAAAcAAJ&pg=PA33|page=33|passage=There had been a long bloody war in the empire of '''Germany''' for twelve years, between the Emperor, the Duke of [[Bavaria]], the King of [[Spain]], and the [[popish|Popiſh]] Princes and Electors, on the one side; and the [[Protestant|Proteſtant]] Princes on the other; and both [[side|ſides]] having been [[exhausted|exhauſted]] by the war, and even the [[Catholics|Catholicks]] [[themselves|themſelves]] beginning to [[dislike|diſlike]] the growing power of the [[house|houſe]] of [[Austria|Auſtria]], it was thought that all parties were willing to make peace.}}
+#* {{quote-text|year=1790|author=Thomas B. Clarke|title=A Statistical View of Germany, in respect to the Imperial and Territorial Constitutions, Forms of Government, Legislation, Administration of Justice, and Ecclesiastical State|page=13|url=http://books.google.com/books?id=SY1LAAAAcAAJ&pg=PA13|passage=When the race of Charlemagne [[cease|ceaſed]] to govern in '''Germany''', the princes and [[state|ſtate]]s [[associate|aſſociated]] to continue the empire; and that its [[majesty|majeſty]] might be [[visible|viſible]], and its laws enforced, they agreed to [[choose|chooſe]] an emperor. From this emperor, all electors and princes, except [[those|thoſe]] before 1582, receive [[investiture|inveſtiture]] of their dominions; counts and free cities from the {{w|Aulic council}}. But this [[investiture|inveſtiture]] is no more than a [[sign|ſign]] of [[submission|ſubmiſſion]] to the [[majesty|majeſty]] of the empire, which is [[deposit|depoſited]] in the emperor. For as the [[constitute|conſtituted]] members of the empire are dependent on that collective union from which they derive protection, they therefore [[shew|ſhew]] this dependence on the emperor, [[because|becauſe]] he [[represent|repreſents]] the [[majesty|majeſty]] of that union, or of the empire; but in all other [[respect|reſpects]] they are independent and free.}}
 # {{lb|en|geography|chiefly|historical}} The [[nation]] of the [[German]] [[people]], [[regardless]] of their [[political]] [[unification]] (''see usage note'').
 #* {{quote-text|year=1775|author=Charles Burney|title=The Present State of Music in Germany, the Netherlands, and United Provinces|volume=II|page=3|url=http://books.google.com/books?id=O1EUAAAAQAAJ&pg=PA3|passage=I had frequently been told, that the [[Bohemia]]ns were the [[most|moſt]] [[musical|muſical]] people of '''Germany''', or, perhaps, of all Europe...}}
 #* {{quote-text|year=1776|author=Edward Gibbon|title=The History of the Decline and Fall of the Roman Empire|volume=I|page=218|url=http://books.google.com/books?id=aLcWAAAAQAAJ&pg=PA218|passage=Ancient '''Germany''', excluding from its independent limits the province [[westward|weſtward]] of the Rhine, which had [[submit|ſubmitted]] to the Roman yoke, extended [[itself|itſelf]] over a third part of Europe. [[almost|Almoſt]] the whole of modern '''Germany''', Denmark, Norway, Sweden, Finland, [[Livonia]], [[Prussia|Pruſſia]], and the greater part of Poland, were peopled by the various tribes of one great nation, [[whose|whoſe]] complexion, manners, and language, denoted a common origin and [[preserve|preſerved]] a [[striking|ſtriking]] [[resemblance|reſemblance]].}}
