--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -15,32 +15,29 @@ From {{etyl|enm|en}} {{m|enm|Germanie}}, from {{etyl|ang|en}} {{m|ang|Germania}}
 {{en-proper noun|~|Germanies|Germanys}}
 
 # {{senseid|en|Q183}}{{lb|en|geography}} The [[Central Europe]]an [[state]] [[form]]ed by [[West Germany]]'s 1990 [[absorption]] of [[East Germany]], with its [[capital]] in [[Berlin]].
-#* {{quote-web|year=2014|month=September|author=Michael Heise|url=http://online.wsj.com/articles/the-myth-of-the-stupid-german-investor-1411668084|title=The Myth of the Stupid German Investor|work=The Wall Street Journal|passage=Germans save a lot, produce plenty and spend little. The result is a massive external surplus. Last year, '''Germany'''’s current account surplus stood at almost [[€]]200 billion ([[USD|$]]260 billion), the world's largest.}}
-#* {{quote-web|year=2014|month=July|author=Sam Bordenjuly|url=http://www.nytimes.com/2014/07/14/sports/worldcup/world-cup-2014-germany-defeats-argentina-in-final.html|title=Germans End Long Wait: 24 Years and a Bit Extra|work=The New York Times|passage=The win made Germany the first European team to prevail in a World Cup in the Americas and gave the Germans, who have made it to the knockout stage in 16 consecutive World Cups, their first trophy since 1990.}}
+#* {{quote-journal|author=Sam Borden|journal={{w|The New York Times}}|url=http://www.nytimes.com/2014/07/14/sports/worldcup/world-cup-2014-germany-defeats-argentina-in-final.html|archiveurl=http://web.archive.org/web/20140713224229/http://www.nytimes.com/2014/07/14/sports/worldcup/world-cup-2014-germany-defeats-argentina-in-final.html|archivedate=July 13, 2014|date=July 13, 2014|title=Germans End Long Wait: 24 Years and a Bit Extra|passage=The win made '''Germany''' the first European team to prevail in a World Cup in the Americas and gave the Germans, who have made it to the knockout stage in 16 consecutive World Cups, their first trophy since 1990.}}
+#* {{quote-journal|author=Michael Heise|journal={{w|The Wall Street Journal}}|url=http://online.wsj.com/articles/the-myth-of-the-stupid-german-investor-1411668084|archiveurl=http://web.archive.org/web/20150107024431/http://www.wsj.com:80/articles/the-myth-of-the-stupid-german-investor-1411668084|archivedate=January 7, 2015|date=September 25, 2014|title=The Myth of the Stupid German Investor|passage=Germans save a lot, produce plenty and spend little. The result is a massive external surplus. Last year, '''Germany'''’s current account surplus stood at almost [[€]]200 billion ([[USD|$]]260 billion), the world's largest.}}
 # {{lb|en|geography|historical}} The [[Central Europe]]an [[state]] [[form]]ed by [[Prussia]] in 1871 or its [[successor]] [[state]]s, with their [[capital]]s in [[Berlin]].
-#* {{quote-book|year=1996|author=Paul Bookbinder|title=Weimar Germany: the republic of the reasonable|ISBN=0719042879|page=90|passage=Severing's belief that trade union workers were the most progressive and democratic element in '''Germany''' holds up well under investigation.}}
+#* {{quote-book|year=1996|author=Paul Bookbinder|title=Weimar Germany: the republic of the reasonable|isbn=0719042879|page=90|passage=Severing's belief that trade union workers were the most progressive and democratic element in '''Germany''' holds up well under investigation.}}
 # {{lb|en|geography|historical}} A [[nominal]] [[medieval]] [[kingdom]] in [[Central Europe]] [[form]]ing a [[region]] of the [[Carolingian]] and [[Holy Roman Empire|Holy Roman]] [[empire]]s, with [[various]] [[capital]]s; by [[extension]], the [[Holy Roman Empire]] [[itself]], the [[empire]] of the [[Austria]]n [[Habsburg]]s.
 #* {{quote-book|year=1759|title=A Military History of Germany; and of England. From the Year 1631 to the Year 1648. Being the Memoirs of an English Gentleman, who served in the army of Gustavus Adolphus; and afterwards in the Royal Army of King Charles I (1759)|url=http://books.google.com/books?id=1JlBAAAAcAAJ&pg=PA33|page=33|passage=There had been a long bloody war in the empire of '''Germany''' for twelve years, between the Emperor, the Duke of [[Bavaria]], the King of [[Spain]], and the [[popish|Popiſh]] Princes and Electors, on the one side; and the [[Protestant|Proteſtant]] Princes on the other; and both [[side|ſides]] having been [[exhausted|exhauſted]] by the war, and even the [[Catholics|Catholicks]] [[themselves|themſelves]] beginning to [[dislike|diſlike]] the growing power of the [[house|houſe]] of [[Austria|Auſtria]], it was thought that all parties were willing to make peace.}}
-#* {{quote-text|year=1790|author=Thomas B. Clarke|title=A Statistical View of Germany, in respect to the Imperial and Territorial Constitutions, Forms of Government, Legislation, Administration of Justice, and Ecclesiastical State|page=13|url=http://books.google.com/books?id=SY1LAAAAcAAJ&pg=PA13|passage=When the race of Charlemagne [[cease|ceaſed]] to govern in '''Germany''', the princes and [[state|ſtate]]s [[associate|aſſociated]] to continue the empire; and that its [[majesty|majeſty]] might be [[visible|viſible]], and its laws enforced, they agreed to [[choose|chooſe]] an emperor. From this emperor, all electors and princes, except [[those|thoſe]] before 1582, receive [[investiture|inveſtiture]] of their dominions; counts and free cities from the {{w|Aulic council}}. But this [[investiture|inveſtiture]] is no more than a [[sign|ſign]] of [[submission|ſubmiſſion]] to the [[majesty|majeſty]] of the empire, which is [[deposit|depoſited]] in the emperor. For as the [[constitute|conſtituted]] members of the empire are dependent on that collective union from which they derive protection, they therefore [[shew|ſhew]] this dependence on the emperor, [[because|becauſe]] he [[represent|repreſents]] the [[majesty|majeſty]] of that union, or of the empire; but in all other [[respect|reſpects]] they are independent and free.}}
+#* {{quote-book|year=1790|author=Thomas B. Clarke|title=A Statistical View of Germany, in respect to the Imperial and Territorial Constitutions, Forms of Government, Legislation, Administration of Justice, and Ecclesiastical State|page=13|url=http://books.google.com/books?id=SY1LAAAAcAAJ&pg=PA13|passage=When the race of Charlemagne [[cease|ceaſed]] to govern in '''Germany''', the princes and [[state|ſtate]]s [[associate|aſſociated]] to continue the empire; and that its [[majesty|majeſty]] might be [[visible|viſible]], and its laws enforced, they agreed to [[choose|chooſe]] an emperor. From this emperor, all electors and princes, except [[those|thoſe]] before 1582, receive [[investiture|inveſtiture]] of their dominions; counts and free cities from the {{w|Aulic council}}. But this [[investiture|inveſtiture]] is no more than a [[sign|ſign]] of [[submission|ſubmiſſion]] to the [[majesty|majeſty]] of the empire, which is [[deposit|depoſited]] in the emperor. For as the [[constitute|conſtituted]] members of the empire are dependent on that collective union from which they derive protection, they therefore [[shew|ſhew]] this dependence on the emperor, [[because|becauſe]] he [[represent|repreſents]] the [[majesty|majeſty]] of that union, or of the empire; but in all other [[respect|reſpects]] they are independent and free.}}
 # {{lb|en|geography|chiefly|historical}} The [[nation]] of the [[German]] [[people]], [[regardless]] of their [[political]] [[unification]] (''see usage note'').
-#* {{quote-text|year=1775|author=Charles Burney|title=The Present State of Music in Germany, the Netherlands, and United Provinces|volume=II|page=3|url=http://books.google.com/books?id=O1EUAAAAQAAJ&pg=PA3|passage=I had frequently been told, that the [[Bohemia]]ns were the [[most|moſt]] [[musical|muſical]] people of '''Germany''', or, perhaps, of all Europe...}}
-#* {{quote-text|year=1776|author=Edward Gibbon|title=The History of the Decline and Fall of the Roman Empire|volume=I|page=218|url=http://books.google.com/books?id=aLcWAAAAQAAJ&pg=PA218|passage=Ancient '''Germany''', excluding from its independent limits the province [[westward|weſtward]] of the Rhine, which had [[submit|ſubmitted]] to the Roman yoke, extended [[itself|itſelf]] over a third part of Europe. [[almost|Almoſt]] the whole of modern '''Germany''', Denmark, Norway, Sweden, Finland, [[Livonia]], [[Prussia|Pruſſia]], and the greater part of Poland, were peopled by the various tribes of one great nation, [[whose|whoſe]] complexion, manners, and language, denoted a common origin and [[preserve|preſerved]] a [[striking|ſtriking]] [[resemblance|reſemblance]].}}
-#* '''1797''', "[http://books.google.com/books?id=AthTAAAAYAAJ&pg=PA396 Mentz]" in the ''Encyclopædia Britannica'', 3rd ed.:
-#*: There are few cities in '''Germany''' [[besides|beſides]] Vienna which contain [[so|ſo]] rich and numerous a nobility as this does: there are [[some|fome]] [[houses|houſes]] here which have [[estates|eſtates]] of 100,000 [[guilder]]s, or 10,000[[pounds|l]]. a-year.
+#* {{quote-book|year=1775|author=Charles Burney|title=The Present State of Music in Germany, the Netherlands, and United Provinces|volume=II|page=3|url=http://books.google.com/books?id=O1EUAAAAQAAJ&pg=PA3|passage=I had frequently been told, that the [[Bohemia]]ns were the [[most|moſt]] [[musical|muſical]] people of '''Germany''', or, perhaps, of all Europe...}}
+#* {{quote-book|year=1776|author=Edward Gibbon|authorlink=Edward Gibbon|title={{w|The History of the Decline and Fall of the Roman Empire}}|volume=I|page=218|url=http://books.google.com/books?id=aLcWAAAAQAAJ&pg=PA218|passage=Ancient '''Germany''', excluding from its independent limits the province [[westward|weſtward]] of the Rhine, which had [[submit|ſubmitted]] to the Roman yoke, extended [[itself|itſelf]] over a third part of Europe. [[almost|Almoſt]] the whole of modern '''Germany''', Denmark, Norway, Sweden, Finland, [[Livonia]], [[Prussia|Pruſſia]], and the greater part of Poland, were peopled by the various tribes of one great nation, [[whose|whoſe]] complexion, manners, and language, denoted a common origin and [[preserve|preſerved]] a [[striking|ſtriking]] [[resemblance|reſemblance]].}}
+#* {{quote-book|editors=Colin MacFarquhar; George Gleig|title=Encyclopædia Britannica: Or, A Dictionary of Arts, Sciences, and Miscellaneous Literature|edition=3rd|publisher=A. Bell and C. MacFarquhar|year=1797|page=396|pageurl=http://books.google.com/books?id=AthTAAAAYAAJ&pg=PA396|section=entry for "Mentz"|passage=There are few cities in '''Germany''' [[besides|beſides]] Vienna which contain [[so|ſo]] rich and numerous a nobility as this does: there are [[some|fome]] [[houses|houſes]] here which have [[estates|eſtates]] of 100,000 [[guilder]]s, or 10,000[[pounds|l.]] a-year.}}
 # {{lb|en|countable|geography|historical}} [[West Germany|West]] or [[East Germany]] or [[any]] [[other]] [[German]] [[state]] (''see usage note''); {{lb|en|in the plural}} [[both]], [[several]], or [[all]] of [[these]] [[state]]s, [[take]]n [[together]].
-#* '''1872''', ''History of English Literature'', John Fiske's abridgment of H. van Laun's translation of Hippolyte Taine's ''Histoire de la littérature anglaise'' (1864), page 26:
-#*: While the Germans of Gaul, Italy, and Spain became Romans, the Saxons retained their language, their genius, and manners, and created in Britain '''a Germany''' outside of Germany.
-#* {{quote-text|year=2007|author=William Clark|title=Academic Charisma and the Origins of the Research University|page=84|isbn=0226109224|passage=The differences between England and the '''Germanies''' sprang from the absence or presence of ministerial interventions.}}
-#* {{quote-text|year=2010|author=Ilan Stavans|title=Gabriel García Márquez: The Early Years|isbn=0312240333|passage=In a Renault 14, they drove from one '''Germany''' to the other...}}
-#* '''2010 September 29''', Klaus Wiegrefe, "[http://www.spiegel.de/international/germany/germany-s-unlikely-diplomatic-triumph-an-inside-look-at-the-reunification-negotiations-a-719848-druck.html Germany's Unlikely Diplomatic Triumph]" in ''Spiegel Online'':
-#*: It is the fall of 1989, and two time zones farther to the west, thousands of people march through downtown Leipzig every Monday, while more than 6,000 East German citizens are camped out in the embassies of West Germany in Prague and Warsaw, hoping to be allowed to emigrate. The images have circled the globe, and it is clear to leaders Thatcher and Gorbachev that the two '''Germanys''' are on the verge of radical change.
+#* {{quote-book|year=1872|editor=John Fiske|title=History of English Literature|type=Abridgment|original={{w|Henri van Laun}}'s translation of {{w|Hippolyte Taine}}'s ''Histoire de la littérature anglaise'' (1864)|page=26|passage=While the Germans of Gaul, Italy, and Spain became Romans, the Saxons retained their language, their genius, and manners, and created in Britain a '''Germany''' outside of Germany.}}
+#* {{quote-book|year=2007|author=William Clark|title=Academic Charisma and the Origins of the Research University|page=84|isbn=0226109224|passage=The differences between England and the '''Germanies''' sprang from the absence or presence of ministerial interventions.}}
+#* {{quote-book|year=2010|author=Ilan Stavans|authorlink=Ilan Stavans|title=Gabriel García Márquez: The Early Years|isbn=0312240333|passage=In a Renault 14, they drove from one '''Germany''' to the other.}}
+#* {{quote-web|author=Klaus Wiegrefe|authorlink=de:Klaus Wiegrefe|url=http://www.spiegel.de/international/germany/germany-s-unlikely-diplomatic-triumph-an-inside-look-at-the-reunification-negotiations-a-719848-druck.html|archiveurl=http://web.archive.org/web/20120627082630/http://www.spiegel.de:80/international/germany/germany-s-unlikely-diplomatic-triumph-an-inside-look-at-the-reunification-negotiations-a-719848-druck.html|archivedate=June 27. 2012|work={{w|Spiegel Online}}|date=September 29, 2010|title=Germany's Unlikely Diplomatic Triumph: An Inside Look at the Reunification Negotiations|passage=It is the fall of 1989, and two time zones farther to the west, thousands of people march through downtown Leipzig every Monday, while more than 6,000 East German citizens are camped out in the embassies of West '''Germany''' in Prague and Warsaw, hoping to be allowed to emigrate. The images have circled the globe, and it is clear to leaders Thatcher and Gorbachev that the two '''Germanys''' are on the verge of radical change.}}
 
 ====Usage notes====
 In its present use, "Germany" almost always refers to the [[Federal Republic of Germany]].<ref name=oed/> Historically, the extent of "Germany" was a contentious issue known in the 19th century as "{{w|The German Question}}". The political area considered "Germany" might include or exclude areas such as [[Prussia]], [[Austria]], [[Bohemia]], or [[Switzerland]] depending on the speaker and context. The area more often described an ethnic region than a polity into the 16th century. In Old English, it was even occasionally used to refer to areas of [[England]] held by the [[Saxons]], [[Angles]], etc.<ref name=oed/> The medieval "Kingdom of Germany" is an English anachronism translating the {{cog|la|rex}} {{m|la|Teutonicorum}} ("king of the [[Teutons]]"), which was initially used as a derogatory exonym before being adopted as a formal title of the Holy Roman Emperors in the early Modern period. The title adopted by the medieval Central European rulers themselves was {{m|la|rex}} {{m|la|Romanorum}} ("king of the [[Romans]]").
 
 ====Synonyms====
 * {{sense|present state}} {{l|en|Federal Republic of Germany}} ([[FRG]], [[BRD]]), [[German]] [[republic|Republic]]
-* {{sense|1949&ndash;1990}} ''See'' '''[[West Germany]]''' and '''[[East Germany]]'''
+* {{sense|1949&ndash;1990}} ''See'' {{l|en|West Germany}} and {{l|en|East Germany}}
 * {{sense|1933&ndash;1945}} {{l|en|Nazi Germany}}, {{l|en|Third Reich}}
 * {{sense|1919&ndash;1933}} {{l|en|Weimar Republic}}, {{l|en|Weimar}} Germany
 * {{sense|1871&ndash;1918}} {{l|en|German Empire}}, {{l|en|German}} [[Reich]], [[Second Reich]]
