--- a/en/昄/昄.16940.wikitext
+++ b/en/昄/昄.16940.wikitext
@@ -41,4 +41,9 @@
 # {{defn|lang=ja|sort=日04}}
 
 ====Readings====
-{{ja-readings|on=[[はん]] (han), [[ばん]] (ban), [[へん]] (hen)|kun=[[おおきい]] (ookii)}}
+{{rfv-pronunciation|ja}}
+{{ja-readings
+|goon=ばん, へん
+|on=はん
+|kun=おお-き.い
+}}
