--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -133,7 +133,7 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 * Finnish: {{t+|fi|imeä}}, {{t+|fi|lutkuttaa}}
 * French: {{t+|fr|sucer}}
 * Friulian: {{t|fur|supâ}}, {{t|fur|supinâ}}, {{t|fur|cjucjâ}}
-* Galician: {{t|gl|chuchar}}, {{t+|gl|zugar}}, {{t+|gl|suchar}}, {{t+|gl|supiar}}, {{t+|gl|churrupiar}}, {{t+|gl|eschurrumar}}
+* Galician: {{t|gl|chuchar}}, {{t+|gl|zugar}}, {{t+|gl|sucar}}, {{t+|gl|suchar}}, {{t+|gl|supiar}}, {{t+|gl|churrupiar}}, {{t+|gl|eschurrumar}}
 * Georgian: {{t|ka|წოვა|sc=Geor}}
 * German: {{t+|de|saugen}}
 * Greek: {{t+|el|βυζαίνω}}
