--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -52,7 +52,7 @@
 {{zh-dial}}
 
 ===Compounds===
-{{zh-der|三簷傘|傘兵|傘兵部隊|傘包|和尚打傘|導傘|打傘|拖曳傘|撐傘|旱傘|核傘|油紙傘|洋傘|游湖借傘|火傘|火傘高張|燈傘|萬民傘|禿子打傘|紙傘|網傘菌|菌傘|藍傘|跳傘|跳傘塔|降落傘|陽傘|雨傘|雨傘節|飛行傘|高空跳傘}}
+{{zh-der|三簷傘|傘兵|傘兵部隊|傘包|和尚打傘|導傘|打傘|拖曳傘|撐傘|旱傘|核傘|油紙傘|洋傘|游湖借傘|火傘|火傘高張|燈傘|萬民傘|禿子打傘|紙傘|網傘菌|菌傘|藍傘|跳傘|跳傘塔|降落傘|陽傘|雨傘|雨傘節|飛行傘|高空跳傘|傘形}}
 
 {{zh-cat|Elementary}}
 
