--- a/en/昜/昜.16964.wikitext
+++ b/en/昜/昜.16964.wikitext
@@ -53,7 +53,10 @@
 # {{defn|lang=ja|sort=日05}}
 
 ====Readings====
-* {{ja-readings|on=[[よう]] (yō)|kun=[[あがる]] (agaru), [[ひかり]] (hikari)}}
+{{ja-readings
+|goon=よう
+|kanon=よう
+|kun=[[あがる]] (agaru), [[ひかり]] (hikari)}}
 
 ----
 
