t+shn:[[{{t-needed}}]] t-balance t+asf:[[{{t-needed}}]] t+eu:[[{{t-needed}}]] t+haw:[[{{t-needed}}]] t+ig:[[{{t-needed}}]] t+or:[[{{t-needed}}]] ([[WT:EDIT|Assisted]]) <beautiful#50633869>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -65,9 +65,11 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Armenian: {{t+|hy|գեղեցիկ|sc=Armn}}, {{t+|hy|սիրուն|sc=Armn}}
 * Assamese: {{t|as|ধুনীয়া}} {{qualifier|common}}, {{t|as|ভাল লগা}}, {{t|as|সুন্দৰ}}
 * Asturian: {{t|ast|guapu|m}}, {{t|ast|guapa|f}}, {{t|ast|formosu|m}}, {{t|ast|formosa|f}}
+* Auslan: {{t-needed|asf}}
 * Azerbaijani: {{t+|az|qəşəng}}
 *: Cyrillic: {{t|az|гәшәнҝ|sc=Cyrl}}
 * Bashkir: {{t|ba|матур}}
+* Basque: {{t-needed|eu}}
 * Belarusian: {{t|be|выда́тны}}, {{t|be|прыго́жы|m|sc=Cyrl}}
 * Bengali: {{t|bn|সুন্দর|sc=Beng}}
 * Breton: {{t+|br|brav}}, {{t+|br|kaer}}
@@ -98,11 +100,13 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Gothic: {{t|got|𐍃𐌺𐌰𐌿𐌽𐍃}}
 * Greek: {{t+|el|ωραίος}}, {{t+|el|όμορφος}}
 *: Ancient: {{t|grc|καλός}}, {{t|grc|ὡραῖος}}
+* Hawaiian: {{t-needed|haw}}
 * Hebrew: {{t+|he|יָפֶה|m|tr=yafé}}, {{t+|he|יָפָה|f|tr=yafá}}
 * Hindi: {{t|hi|ख़ूबसूरत}}, {{t+|hi|सुन्दर}}
 * Hungarian: {{t+|hu|szép}}, {{t+|hu|gyönyörű}}
 * Icelandic: {{t+|is|fallegur}}, {{t+|is|fagur}}
 * Ido: {{t+|io|bela}}
+* Igbo: {{t-needed|ig}}
 * Indonesian: {{t+|id|indah}}, {{t+|id|cantik}}, {{t+|id|ayu}}, {{t+|id|molek}}, {{t+|id|cakep}}
 * Interlingua: {{t|ia|belle}}
 * Irish: {{t|ga|álainn}}, {{t|ga|spéiriúil}}
@@ -119,12 +123,12 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Kurdish:
 *: Sorani: {{t+|ku|جوان}}, {{t|ku|ئێسک سووک}}
 * Kyrgyz: {{t+|ky|сулуу}}, {{t+|ky|көркөм}}, {{t+|ky|кооз}}, {{t+|ky|сонун}}, {{t+|ky|чырайлуу}}, {{t+|ky|чырай жүздүү}}, {{t+|ky|сулуу}}, {{t+|ky|укмуштай}}, {{t+|ky|укмуштай}}, {{t+|ky|ажайып}}, {{t+|ky|көйүткөн}}
+{{trans-mid}}
 * Lao: {{t|lo|ງາມ}}
 * Latin: {{t|la|pulcher}}, {{t|la|formosus|m}}, {{t+|la|bellus|m}}
 * Latvian: {{t|lv|skaists}}, {{t|lv|daiļš}}, {{t|lv|glīts}}
 * Limburgish: {{t|li|sjoen}}
 * Lithuanian: {{t+|lt|gražus}}
-{{trans-mid}}
 * Low German: {{t+|nds|schöön}}, {{t|nds|scheun}}
 * Lü: {{t|khb|ᦇᦱᧄ|sc=Talu}}
 * Macedonian: {{t|mk|убав}}, {{t|mk|прекрасен}}
@@ -144,6 +148,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Old English: {{t|ang|wlitig}}, {{t|ang|fæger}}, {{t|ang|freawlitig}}, {{t|ang|gebleod}}, {{t|ang|hleortorht}}, {{t|ang|sciene}}, {{t|ang|hiwbeorht}}, {{t|ang|torht}}, {{t|ang|freolic}}, {{t|ang|smicer}}, {{t|ang|wliteful}}, {{t|ang|wlitescine}}, {{t|ang|cyme}}, {{t|ang|cymlic}}
 * Old Norse: {{t|non|fagr}}
 * Old Occitan: {{t|pro|bel}}
+* Oriya: {{t-needed|or}}
 * Pashto: {{t+|ps|ښکلی|tr=ẍkwëlay}}
 * Persian: {{t+|fa|زیبا|tr=zibâ}}, {{t+|fa|قشنگ|tr=qašang}}
 * Polish: {{t+|pl|piękny}}
@@ -159,6 +164,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|ле̑п}}, {{t|sh|лије̑п}}, {{t|sh|лип}}
 *: Roman: {{t+|sh|lȇp}}, {{t+|sh|lijȇp}}, {{t+|sh|lip}}
+* Shan: {{t-needed|shn}}
 * Sicilian: {{t+|scn|beddu|m}}, {{t+|scn|bedda|f}}
 * Sinhalese: {{t+|si|ලස්සන|sc=Sinh}}, {{t|si|සුන්දර|sc=Sinh}}
 * Slovak: {{t|sk|krásny}}, {{t|sk|pekný}}
