--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -31,7 +31,8 @@ Oracle bone form: {{Han compound|𡿧|日|ls=ic|t1=disaster; floods|t2=sun}} –
 |c=sik1
 |md=sék
 |mn=qz:siak/tw,xm,zz:sek
-|mn-t=sêg4
+|mn-t=sêg4/za2
+|mn-t_note=za2 - semantic (訓讀) (original character is [[早]])
 |w=4xiq
 |mc=y
 |oc=y
