--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -261,7 +261,7 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 * Uyghur: {{t|ug|سۆزلىمەك|sc=ug-Arab}}, {{t|ug|ئېيتماق|sc=ug-Arab}}
 * Uzbek: {{t+|uz|gaplashmoq}}
 * Venetian: {{t+|vec|parlar}}
-* Vietnamese: {{t+|vi|nói}}, {{t+|vi|nói chuyện}}, {{t|vi|nói được}}
+* Vietnamese: {{t+|vi|nói}}
 * Volapük: {{t+|vo|spikön}}
 * Walloon: {{t+|wa|cåzer}}, {{t+|wa|divizer}}, {{t+|wa|djåzer}}, {{t+|wa|pårler}}
 * Welsh: {{t+|cy|siarad}}, {{t+|cy|llefaru}}
