/* Derived terms */ <plum#50643699>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -124,17 +124,17 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{l|en|plum curculio}}
 * {{l|en|plum gouger}}
 * {{l|en|plum peach}}
-* {{l|en|plum pine}}
+* {{vern|plum pine}}
 * {{l|en|plum pox}}
 * {{l|en|plum pudding}}, {{l|en|plum-pudding}}
 * {{l|en|plum rains}}
 * {{l|en|plum sauce}}
 {{rel-mid4}}
 * {{l|en|plum tomato}}
-* {{l|en|plum tree}}
-* {{l|en|plum weevil}}
+* {{vern|plum tree}}
+* {{vern|plum weevil}}
 * {{l|en|plum wine}}
-* {{l|en|plum yew}}
+* {{l|en|plum yew}} ({{taxlink|Cephalotaxus|species|ver=181106}})
 * {{l|en|plum-bird}}, {{l|en|plum bird}}
 * {{l|en|plum-blossom}}
 * {{l|en|plum-broth}}
@@ -145,7 +145,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{l|en|plumcot}}
 * {{l|en|plum-damas}}, {{l|en|plumdamas}}, {{l|en|plum-damis}}
 * {{l|en|plum-dough}}, {{l|en|plum-duff}}
-* {{l|en|plum-fir}}
+* {{vern|plum-fir}}
 * {{l|en|plum-gouger}}, {{l|en|plum gouger}}
 * {{l|en|plum-in-the-mouth}}
 * {{l|en|plumless}}
