--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -119,20 +119,22 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{l|en|pear-plum}}
 * {{l|en|persimmon-plum}}
 * {{l|en|pigeon-plum}}
-* {{vern|plum bird}} ({{taxlink|Pyrrhula pyrrhula|species|ver=181106}})
+* {{vern|plum bird}} (''[[Pyrrhula pyrrhula]]'')
 * [[plum bladder]] ({{taxlink|Taphrina|genus|ver=181106}} spp.)
 * {{l|en|plum blossom}}
 * [[plum blotch]] ({{taxlink|Phyllosticha congesta|species|ver=181106}})
 * {{l|en|plum brandy}}
-* {{vern|plum budder}} ({{taxlink|Pyrrhula pyrrhula|species|ver=181106}})
+* {{vern|plum budder}} (''[[Pyrrhula pyrrhula]]'')
 * {{vern|plum-colored starling}} ({{taxlink|Cinnyricinclus leucogaster|species|ver=181106}})
 * {{l|en|plum curculio}} ({{taxlink|Conotrachelus nenuphar|species|ver=181106}})
 * {{vern|plum fir}} ({{taxlink|Prumnopitys andina|species|ver=181106}})
 * {{vern|plum fruit moth}}
 * {{vern|plum-fruited yew}} ({{taxlink|Prumnopitys andina|species|ver=181106}})
 * {{l|en|plum gouger}} ({{taxlink|Anthonomus scutellaris|species|ver=181105}})
+* {{vern|plum grape}}
+* {{vern|plum-headed finch}} ([[Neochmia modesta]])
 * {{l|en|plum peach}}
-* {{vern|plum pine}}
+* {{l|en|plum pine}}
 * [[plum pocket]] ({{taxlink|Taphrina|genus|ver=181106}} spp.)
 * {{l|en|plum pox}}
 * {{l|en|plum pudding}}, {{l|en|plum-pudding}}
@@ -140,7 +142,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{l|en|plum sauce}}
 {{rel-mid4}}
 * {{l|en|plum tomato}}
-* {{vern|plum tree}}
+* {{l|en|plum tree}}
 * {{vern|plum weevil}}
 * {{l|en|plum wine}}
 * {{l|en|plum yew}} ({{taxlink|Cephalotaxus|species|ver=181106}})
