/* Derived terms */ <plum#50643888>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -145,6 +145,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{vern|plum scab}} ({{taxlink|Cladosporium carpophilum|species|ver=181106}})
 {{rel-mid4}}
 * {{vern|plum thrips}} ({{taxlink|Taeniothrips inconsequens|species|ver=181106}})
+* {{vern|plum-throated cotinga}} ({{taxlink|Cotinga maynana|species|ver=181106}})
 * {{l|en|plum tomato}}
 * {{l|en|plum tree}}
 * {{vern|plum weevil}}
@@ -169,7 +170,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{l|en|plummy}}
 {{rel-mid4}}
 * {{l|en|plum-pie}}
-* {{vern|plum pine}} ({{taxlink|Podocarpus elatus|species|ver=181106}}) 
+* {{l|en|plum pine}} ({{taxlink|Podocarpus elatus|species|ver=181106}}) 
 * {{l|en|plum-pockets}}
 * {{l|en|plum-porridge}}
 * {{l|en|plum-pottage}}
