/* Derived terms */ <plum#50643971>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -52,33 +52,33 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 
 =====Derived terms=====
 {{rel-top4|derived terms (types of fruit trees associated with places)}}
-* {{l|en|American black plum}}
-* {{l|en|American wild plum}} (''[[Prunus americana]]'')
+* {{vern|American black plum}}
+* {{l|en|American wild plum}} ({{taxlink|Prunus americana|species|ver=181106}})
 * {{vern|Assyrian plum}} ({{taxlink|Cordia myxa|species|ver=181106}})
 * {{vern|Australian plum}} ({{taxlink|Cargillia arborea|species|ver=181106}}, {{taxlink|Cargillia australis|species|ver=181106}})
-* {{l|en|Brazilian plum}}
+* {{vern|Brazilian plum}}
 * {{vern|Canada plum}} ({{taxlink|Prunus nigra|species|ver=181106}})
 * {{l|en|Chinese plum}} (''[[Prunus mume]]'', {{taxlink|Prunus salicina|species|ver=181106}}, ''[[Eriobotrya japonica]]'')
 * {{vern|Darling plum}} ({{taxlink|Reynosia septentrionalis|species|ver=181106}})
 {{rel-mid4}}
-* {{l|en|East Indian plum}}
+* {{vern|East Indian plum}}
 * {{l|en|Guinea plum}} ({{taxlink|Parinarium excelsum|species|ver=181106}})
 * {{l|en|Indian plum}} ({{taxlink|Flacourtia|genus|ver=181106}} spp, esp {{taxlink|Flacourtia indica|species|ver=181106}}; {{taxlink|Osmaronia cerasiformis|species|ver=181106}})
-* {{l|en|Jamaica plum}} ({{taxlink|Spondias mombin|species|ver=181106}})
-* {{l|en|Japanese plum}}
-* {{l|en|Japan plum}}
+* {{vern|Jamaica plum}} ({{taxlink|Spondias mombin|species|ver=181106}})
+* {{vern|Japanese plum}}
+* {{vern|Japan plum}}
 {{rel-mid4}}
-* {{l|en|Morocco plum}}
+* {{vern|Morocco plum}}
 * {{l|en|Natal plum}}
-* {{l|en|Orleans plum}}
-* {{l|en|Port Arthur plum}}
-* {{l|en|Queensland plum}}
-* {{l|en|Satsuma plum}}
+* {{vern|Orleans plum}}
+* {{vern|Port Arthur plum}}
+* {{vern|Queensland plum}}
+* {{vern|Satsuma plum}}
 {{rel-mid4}}
 * {{l|en|Sierra plum}}
-* {{l|en|Spanish plum}}
-* {{l|en|Tasmanian plum}}
-* {{l|en|yellow Spanish plum}}
+* {{vern|Spanish plum}}
+* {{vern|Tasmanian plum}}
+* {{vern|yellow Spanish plum}}
 {{rel-bottom}}
 {{rel-top4|other derived terms}}
 * {{l|en|apple-plum}}
