/* Derived terms */ <plum#50644585>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -62,6 +62,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{vern|Darling plum}} ({{taxlink|Reynosia septentrionalis|species|ver=181106}})
 {{rel-mid4}}
 * {{vern|East Indian plum}}
+* {{vern|Florida sand plum}} ({{taxlink|Prunus angustifolia|species|ver=181106}})
 * {{l|en|Guinea plum}} ({{taxlink|Parinarium excelsum|species|ver=181106}})
 * {{l|en|Indian plum}} ({{taxlink|Flacourtia|genus|ver=181106}} spp, esp {{taxlink|Flacourtia indica|species|ver=181106}}; {{taxlink|Osmaronia cerasiformis|species|ver=181106}})
 * {{vern|Jamaica plum}} ({{taxlink|Spondias mombin|species|ver=181106}})
@@ -89,6 +90,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{l|en|bullace plum}}
 * {{vern|burdekin plum}} ({{taxlink|Pleiogynium solandri|species|ver=181106}})
 * {{l|en|cherry plum}}
+* {{vern|Cherokee plum}} ({{taxlink|Prunus angustifolia|species|ver=181106}}) Florida sand plum, sandhill plum
 * {{vern|Chickasaw plum}} ({{taxlink|Prunus angustifolia|species|ver=181106}})
 * {{l|en|cocoa plum}}, {{l|en|coco plum}}, {{l|en|cocoplum}}
 * {{l|en|damascene plum}}, {{l|en|damask plum}}, {{l|en|damson plum}}
@@ -179,6 +181,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{l|en|plum-stone}}
 * {{l|en|pluot}}
 * {{vern|sand plum}} ({{taxlink|Prunus angustifolia subsp. watsonii|subspecies|ver=181106}})
+* {{vern|sandhill plum}} ({{taxlink|Prunus angustifolia|species|ver=181106}})
 * {{l|en|sapodilla plum}}
 * {{vern|seaside plum}}  ({{taxlink|Ximenia americana|species|ver=181106}}, {{taxlink|Coccoloba uvifera}})
 * {{vern|sebesten plum}} ({{taxlink|Cordia myxa|species|ver=181106}})
