--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -105,6 +105,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{l|en|gopher plum}}
 * {{vern|governor's plum}}, {{vern|governor plum}} ({{taxlink|Flacourtia indica|species|ver=181106}})
 * {{vern|gray plum}}, {{vern|grey plum}} ({{taxlink|Parinarium excelsum|species|ver=181106}})
+* {{vern|green plum}} (''[[Prunus mume]]'')
 * {{vern|greengage plum}} ({{taxlink|Prunus italica|species|ver=181106}}, syn. {{taxlink|Prunus domestica subsp. italica|subspecies|ver=181106}})
 * {{vern|ground plum}} (''[[Astragalus]]'' spp., especially {{taxlink|Astragalus caryocarpus|species|ver=181106}})
 * [[hog plum]], {{vern|hogplum}} (''[[Spondias]]'' spp., {{taxlink|Metopium toxiferum|species|ver=181106}}, {{taxlink|Prunus angustifolia|species|ver=181106}}, {{taxlink|Ximenia americana|species|ver=181106}})
@@ -212,7 +213,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{vern|wild-goose plum}} ({{taxlink|Prunus hortulana|species|ver=181106}}, {{taxlink|Prunus munsoniana|species|ver=181106}})
 * {{vern|wild plum}} (''[[Prunus]]'' spp, {{taxlink|Pappea capensis|species|ver=181106}}, {{taxlink|Sieroxylon australe|species|ver=181106}})
 * {{vern|winter plum}} (''[[Diospyros]]'' spp)
-* {{vern|yellow plum}} ({{vern|Prunus americana|species|ver=181106}})
+* {{vern|yellow plum}} ({{taxlink|Prunus americana|species|ver=181106}})
 * {{l|en|yellowgage plum}}
 {{rel-bottom}}
 
