/* Derived terms */ <plum#50644928>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -83,7 +83,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 {{rel-bottom}}
 {{rel-top4|other derived terms}}
 * {{l|en|apple-plum}}
-* {{l|en|beach plum}}, {{l|en|beach-plum}} ([[Prunus maritima]])
+* {{l|en|beach plum}}, {{vern|beach-plum}} ({{taxlink|Prunus maritima|species|ver=181106}})
 * {{vern|big-tree plum}} ({{taxlink|Prunus mexicana|species|ver=181106}})
 * {{l|en|black plum of Illawarra}}
 * {{vern|blood plum}} 
@@ -101,7 +101,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{l|en|dried plum}}<!--US advertisers' term for "prune", used with the intention of avoiding the negative connotations of that word-->
 * {{l|en|gingerbread plum}}
 * {{l|en|golden plum}}
-* {{l|en|gopher plum}} ({{taxlink|Nyssa ogeche|species|ver=181106}}, {{taxlink|Chrysobalanus icaco|species|ver=181106}}, {{taxlink|Chrysobalanus oblongifolius|species|ver=181106}})
+* {{vern|gopher plum}} ({{taxlink|Nyssa ogeche|species|ver=181106}}, {{taxlink|Chrysobalanus icaco|species|ver=181106}}, {{taxlink|Chrysobalanus oblongifolius|species|ver=181106}})
 * {{vern|governor's plum}}, {{vern|governor plum}} ({{taxlink|Flacourtia indica|species|ver=181106}})
 * {{vern|gray plum}}, {{vern|grey plum}} ({{taxlink|Parinarium excelsum|species|ver=181106}})
 * {{vern|green plum}} (''[[Prunus mume]]'')
@@ -112,24 +112,24 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{l|en|leaf-curling plum aphid}}
 {{rel-mid4}}
 * {{l|en|maiden plum}}
-* {{l|en|marmalade plum}} ({{taxlink|Calocarpum zapota|species|ver=181106}}, {{taxlink|Mammea americana|species|ver=181106}})
+* {{vern|marmalade plum}} ({{taxlink|Calocarpum zapota|species|ver=181106}}, {{taxlink|Mammea americana|species|ver=181106}})
 * {{l|en|mirabelle plum}} (''[[Prunus cerasifera]]'')
 * {{l|en|mobola plum}}
-* {{l|en|mountain plum}} ({{taxlink|Ximenia americana|species|ver=181106}})
+* {{vern|mountain plum}} ({{taxlink|Ximenia americana|species|ver=181106}})
 * {{vern|moxie plum}} ({{taxlink|Gaultheria hispidula|species|ver=181106}})
 * {{l|en|muscle plum}}
 * {{l|en|mussel plum}}
-* {{l|en|myrobalan plum}}, {{l|en|myrobella plum}} (''[[Prunus cerasifera]]'')
-* {{l|en|olive plum}} ({{taxlink|Elaeodendron|genus|ver=181106}} spp.)
+* {{vern|myrobalan plum}}, {{l|en|myrobella plum}} (''[[Prunus cerasifera]]'')
+* {{vern|olive plum}} ({{taxlink|Elaeodendron|genus|ver=181106}} spp.)
 * {{l|en|nectaplum}}
 * {{l|en|partridge plum}}
 * {{l|en|pear-plum}}
 * {{l|en|pear-plum}}
 * {{l|en|pear-plum}}
 * {{l|en|persimmon-plum}}
-* {{l|en|pigeon-plum}} (''[[Coccoloba]]'' spp.), {{taxlink|Chrysobalanus ellipticus|species|ver=181106}})
+* {{vern|pigeon plum}} (''[[Coccoloba]]'' spp.), {{taxlink|Chrysobalanus ellipticus|species|ver=181106}})
 * {{vern|plum bird}} (''[[Pyrrhula pyrrhula]]'')
-* [[plum bladder]] ({{taxlink|Taphrina|genus|ver=181106}} spp.)
+* {{vern|plum bladder}} ({{taxlink|Taphrina|genus|ver=181106}} spp.)
 * {{l|en|plum blossom}}
 * {{vern|plum blotch}} ({{taxlink|Phyllosticha congesta|species|ver=181106}})
 * {{l|en|plum brandy}}
@@ -160,7 +160,6 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{vern|plum weevil}} ({{taxlink|Conotrachelus nenuphar|species|ver=181106}})
 * {{l|en|plum wine}}
 * {{l|en|plum yew}} ({{taxlink|Cephalotaxus|species|ver=181106}})
-* {{l|en|plum-bird}}, {{l|en|plum bird}}
 * {{l|en|plum-blossom}}
 * {{l|en|plum-broth}}
 * {{l|en|plum-cake}}
