--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -190,7 +190,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{vern|sand plum}} ({{taxlink|Prunus angustifolia subsp. watsonii|subspecies|ver=181106}})
 * {{vern|sandhill plum}} ({{taxlink|Prunus angustifolia|species|ver=181106}})
 * {{l|en|sapodilla plum}}
-* {{vern|seaside plum}}  ({{taxlink|Ximenia americana|species|ver=181106}}, {{taxlink|Coccoloba uvifera}})
+* {{vern|seaside plum}}  ({{taxlink|Ximenia americana|species|ver=181106}}, {{taxlink|Coccoloba uvifera|species|ver=181106}})
 * {{vern|sebesten plum}} ({{taxlink|Cordia myxa|species|ver=181106}})
 * {{vern|seeded plum}} (''[[Diospyros]]'' spp.)
 * {{l|en|shore plum}}
