/* Readings */ Readings fix, more expansion needed <慚#50645628>

--- a/en/慚/慚.15726.wikitext
+++ b/en/慚/慚.15726.wikitext
@@ -44,7 +44,11 @@
 # {{defn|lang=ja|sort=心11}}
 
 ====Readings====
-* {{ja-readings|goon=ざん<ざん<ざむ|kanon=さん<さん<さむ|kun=はじ-, はじ-る}}
+{{ja-readings
+|goon=ざん<ざん<ざむ
+|kanon=さん<さん<さむ
+|kun=はじ-<はぢ-, は-じる<は-ぢる
+}}
 
 ----
 
