--- a/en/惲/惲.15623.wikitext
+++ b/en/惲/惲.15623.wikitext
@@ -31,7 +31,7 @@
 # to [[devise]]; to [[plan]]; to [[deliberate]]
 # to [[consult]]
 # a [[surname]]
-#: {{zh-x|^惲 ^代-英|{{w|Yun Daiying|'''Yun''' Daiying, early leader of the Communist Party of China}}}}
+#: {{zh-x|^惲 ^代-英|{{w|Yun Daiying|'''Yun''' Daiying}}, early leader of the Communist Party of China}}
 
 ===References===
 * {{R:yue:mfccd}}
