--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -272,8 +272,8 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian||to float}}, from {{etyl|g
 
 ====Translations====
 {{trans-top|buoyant device}}
-* Bashkir: {{t|ba|ҡалҡыуыс|sc=Cyrl}}
-* Bulgarian: {{t|bg|буй|m|sc=Cyrl}}, {{t|bg|поплавък|sc=Cyrl}}
+* Bashkir: {{t|ba|ҡалҡыуыс}}
+* Bulgarian: {{t|bg|буй|m}}, {{t|bg|поплавък}}
 * Dutch: {{t+|nl|vlot|n}}
 * Finnish: {{t+|fi|koho}} {{qualifier|as part of fishing gear}}; {{t+|fi|kelluke}}
 * French: {{t+|fr|flotteur|m}}
@@ -303,7 +303,7 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian||to float}}, from {{etyl|g
 {{trans-bottom}}
 
 {{trans-top|sort of trowel}}
-* Bulgarian: {{t|bg|мистрия|f|sc=Cyrl}}
+* Bulgarian: {{t|bg|мистрия|f}}
 * Dutch: {{t|nl|soort truweel}}
 {{trans-mid}}
 * Finnish: {{t|fi|hierrin}}
