--- a/en/昼/昼.16997.wikitext
+++ b/en/昼/昼.16997.wikitext
@@ -58,7 +58,7 @@ From {{ja-compound|日|ひ|る|t1=sun|pos2=suffix expressing state or change}}, 
 ====Noun====
 {{ja-noun|ひる}}
 
-# [[noon]] (12 p.m.)
+# [[noon]] (12:00; 12 p.m.)
 # [[daytime]]
 # a meal eaten around the noon; [[lunch]]
 
