--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -273,3 +273,8 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 
 ====Declension====
 {{sv-infl-noun-c-ar}}
+
+===Interjection===
+{{head|sv|interjection}}
+
+# [[sigh]]
