--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -4,7 +4,7 @@
 [[File:Olea_europaea1.jpg|thumb|a typical '''olive''' tree ({{taxlink|Olea europaea|species|noshow=1|ver=161227}}) (1)]]
 
 ===Etymology===
-From {{inh|en|enm|olyve}}, from {{der|en|fro|olive||olive, olive tree}}, from {{der|en|la|olīva||olive}}, from {{der|en|ett|𐌄𐌋𐌄𐌉𐌅𐌀|tr=eleiva|sc=Ital}} or Proto-Greek {{m|grc|*ἐλαίϝα}}, ultimately from {{der|en|ine-pro|*loiwom}} (compare {{cog|cu|лои||tallow}}, {{cog|xcl|եւղ||oil}}).<ref>Radoslav Katičić, ''Ancient Languages of the Balkans, Part One'' (Paris: Mouton, 1976).</ref>
+From {{inh|en|enm|olyve}}, borrowed from {{bor|en|fro|olive||olive, olive tree}}, from {{der|en|la|olīva||olive}}, from {{der|en|ett|𐌄𐌋𐌄𐌉𐌅𐌀|tr=eleiva|sc=Ital}} or Proto-Greek {{m|grc|*ἐλαίϝα}}, ultimately from {{der|en|ine-pro|*loiwom}} (compare {{cog|cu|лои||tallow}}, {{cog|xcl|եւղ||oil}}).<ref>Radoslav Katičić, ''Ancient Languages of the Balkans, Part One'' (Paris: Mouton, 1976).</ref>
 
 ===Pronunciation===
 * {{enPR|ŏl'ĭv}}, {{IPA|/ˈɒlɪv/|lang=en}}
@@ -264,7 +264,7 @@ From {{inh|en|enm|olyve}}, from {{der|en|fro|olive||olive, olive tree}}, from {{
 ==French==
 
 ===Etymology===
-From {{inh|fr|la|oliva}}.
+From {{inh|fr|fro|olive}}, from {{inh|fr|la|olīva}}.
 
 ===Pronunciation===
 * {{fr-IPA}}
@@ -274,6 +274,9 @@ From {{inh|fr|la|oliva}}.
 {{fr-noun|f}}
 
 # {{l|en|olive}}
+
+====Derived terms====
+* {{l|fr|olivier}}
 
 ===Further reading===
 * {{R:TLFi}}
@@ -322,6 +325,9 @@ Borrowed from {{bor|gmh|la|oliva}}.
 ----
 
 ==Old French==
+
+===Etymology===
+From {{inh|fro|la|olīva}}.
 
 ===Noun===
 {{head|fro|noun|g=m|g2=f}}
