t+ca:[[punyalada]] t-balance ([[WT:EDIT|Assisted]]) <stab#50724818>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -82,9 +82,10 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 {{trans-bottom}}
 
 {{trans-top|pain inflicted on a person's feelings}}
+* Catalan: {{t+|ca|punyalada|f}}
 * Finnish: {{t+|fi|pisto}}
-* Norwegian: {{t+|no|stikk|n}}
 {{trans-mid}}
+* Norwegian: {{t+|no|stikk|n}}
 * Portuguese: {{t+|pt|punhalada|f}}
 {{trans-bottom}}
 
