of course the food is countable: e.g. French and Swiss butters <butter#50749367>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -23,10 +23,10 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 ====Noun====
 {{en-noun|-|s}}
 
-# {{lb|en|uncountable}} A soft, fatty foodstuff made by [[churn]]ing the [[cream]] of [[milk]] (generally cow's milk).
-# {{lb|en|uncountable}} Any of various foodstuffs made from other foods or oils, similar in consistency to, eaten like or intended as a substitute for butter (''preceded by the name of the food used to make it'').
+#  A soft, fatty foodstuff made by [[churn]]ing the [[cream]] of [[milk]] (generally cow's milk).
+# Any of various foodstuffs made from other foods or oils, similar in consistency to, eaten like or intended as a substitute for butter (''preceded by the name of the food used to make it'').
 #: ''peanut '''butter'''''
-# {{lb|en|countable|obsolete|chemistry}} Any specific [[soft]] [[substance]].
+# {{lb|en|obsolete|chemistry}} Any specific [[soft]] [[substance]].
 #: '''''butter''' of antimony; '''butter''' of arsenic''
 
 =====Derived terms=====
@@ -390,7 +390,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 
 # {{lb|en|transitive}} To [[spread]] butter on.
 #: '''''Butter''' the toast.''
-# to move one's weight backwards or forwards onto the tips or tails of one's skis or snowboard so only the tip or tail is in contact with the snow.
+# To move one's weight backwards or forwards onto the tips or tails of one's skis or snowboard so only the tip or tail is in contact with the snow.
 # {{lb|en|slang|obsolete|transitive}} To [[increase]] (stakes) at every [[throw]] of [[dice]], or every [[game]].
 #: {{rfquotek|Johnson}}
 
