--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -48,10 +48,10 @@
 # to [[lend]]; to [[borrow]]; to [[loan]]
 #: {{zh-x|假道伐虢}}
 #: {{zh-x|假以時日}}
-# [[guise]]
+# (verb) [[guise]]
 #: {{zh-x|不假思索}}
 #: {{zh-x|假借}}
-# [[disguise]]; to [[fake]]; to [[pretend]]
+# (verb) [[disguise]]; to [[fake]]; to [[pretend]]
 #: {{zh-x|假裝}}
 # [[forged]]; [[artificial]]
 #: {{zh-x|假貨|counterfeit goods}}
