--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -151,6 +151,57 @@ Three other forms were found in the oracle bone script:
 
 ----
 
+==Kunigami==
+
+===Kanji===
+{{head|xug|kanji}}
+
+* {{ja-readings|kun=[[はか゚い]] ([[明か゚い]], hakai)}}
+
+===Pronunciation===
+* {{IPA|/hakai/|lang=xug}}
+
+===Noun===
+{{head|xug|noun|hiragana|はか゚い|romaji|hakai}}
+
+# [[light]]
+
+----
+
+==Miyako==
+
+===Kanji===
+{{head|mvi|kanji}}
+
+* {{ja-readings|kun=[[あかーㇲ゙]] ([[明かーㇲ゙]], akaaz)}}
+
+===Pronunciation===
+* {{IPA|/akaːz̩/|lang=mvi}}
+
+===Noun===
+{{head|mvi|noun|hiragana|あかーㇲ゙|romaji|akaaz}}
+
+# [[light]]
+
+----
+
+==Okinawan==
+
+===Kanji===
+{{head|ryu|kanji}}
+
+* {{ja-readings|kun=[[あかい]] ([[明かい]], akai)}}
+
+===Pronunciation===
+* {{IPA|/ʔakai/|lang=ryu}}
+
+===Noun===
+{{head|ryu|noun|hiragana|あかい|romaji|akai}}
+
+# [[light]]
+
+----
+
 ==Vietnamese==
 
 ===Han character===
@@ -163,3 +214,20 @@ Three other forms were found in the oracle bone script:
 
 # {{given name|male|lang=vi|sort=Minh}}
 # The Ming Dynasty in China's history
+
+----
+
+==Yaeyama==
+
+===Kanji===
+{{head|rys|kanji}}
+
+* {{ja-readings|kun=[[あかりぃ]] ([[明かりぃ]], akarï)}}
+
+===Pronunciation===
+* {{IPA|/ʔakarɨ/|lang=rys}}
+
+===Noun===
+{{head|rys|noun|hiragana|あかりぃ|romaji|akarï}}
+
+# [[light]]
