/* Translations */Changed gender of "tegola", which is female. <brick#51027421>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -135,7 +135,7 @@ From {{der|en|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{der|en|gem}
 * Ingush: {{t|inh|кирпишк}}
 * Interlingua: {{t|ia|bricca}}
 * Irish: {{t|ga|bríce|m}}
-* Italian: {{t+|it|mattone|m}}, {{t+|it|laterizio|m}}, {{t+|it|tegola|m}}
+* Italian: {{t+|it|mattone|m}}, {{t+|it|laterizio|m}}, {{t+|it|tegola|f}}
 * Japanese: {{t|ja|煉瓦|tr=れんが, renga}}
 * Javanese: {{t+|jv|bata}}
 * Kalmyk: {{t|xal|кирпич}}
