def: 54th [[tetragram]] of the {{w|Taixuanjing}}; "[[unity]]" ([[𝌻]]) ([[WT:EDIT|Assisted]]) <昆#51043012>

--- a/en/昆/昆.16942.wikitext
+++ b/en/昆/昆.16942.wikitext
@@ -96,7 +96,7 @@
 {{zh-hanzi}}
 
 # {{†}} {{zh-alt-form|混|to unite}}
-# 54th [[tetragram]] of the {{w|Taixuanjing}}; "unity"
+# 54th [[tetragram]] of the {{w|Taixuanjing}}; "[[unity]]" ([[𝌻]])
 
 ===Etymology 4===
 {{zh-see|崑}}
