/* Definitions */ # {{lb|zh|literary}} to be [[angry]]; to [[resent]] #* {{zh-x|人 不知 而 不 慍 ，不亦 君子 乎 ？|Is he not a man of complete virtue, who feels no '''discomposure'' though men may take no note of him?|ref=Analects}} 现代汉语词典7 p1624 "〈书〉"; 现代汉语规范词典3 p1634 "〈文〉"; https://ctext.org/analects/xue-er?searchu=人不知而不慍，不亦君子乎&searchmode=showall <慍#51066342>

--- a/en/慍/慍.15712.wikitext
+++ b/en/慍/慍.15712.wikitext
@@ -29,8 +29,8 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# to be [[angry]]; to [[resent]]
-#* {{zh-x|人 不知 而 不 慍 ，不亦 君子 乎 ？|Is he not a man of complete virtue, who feels no '''discomposure''' though man may take note of him?|ref=Analects}}
+# {{lb|zh|literary}} to be [[angry]]; to [[resent]]
+#* {{zh-x|人 不知 而 不 慍 ，不亦 君子 乎 ？|Is he not a man of complete virtue, who feels no '''discomposure'' though men may take no note of him?|ref=Analects}}
 
 ===Compounds===
 {{zh-der|慍懟|慍容|慍色|慍羝|慍恚|慍怒|解慍}}
