/* Verb */ added subdef with usexes, reworded main def <come#51070369>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -82,14 +82,18 @@ Cognate to English {{m|en|basis}}, from PIE via Ancient Greek.
 #* {{quote-magazine|date=2014-06-14|volume=411|issue=8891|magazine={{w|The Economist}}
 |title=[http://www.economist.com/news/science-and-technology/21604091-it-possible-sniff-out-problems-sewer-pipes-they-happen-its-gas It's a gas]
 |passage=But out of sight is out of mind. And that{{...}}means that many old sewers have been neglected and are in dire need of repair. If that repair does not '''come''' in time, the result is noxious and potentially hazardous.}}
-# {{lb|en|intransitive|with ''from'' or sometimes ''of''}} To have a social background.
-#* '''2011''', Kate Gramich, ''Kate Roberts'', University of Wales Press, {{ISBN|9780708323380}}, chapter 3, {{gbooks|vE2uBwAAQBAJ|46|came}}:
-#*: While Kate Roberts '''came''' from a poor background and, later in life, in the post-Second World War period suffered from severe money shortages, in the early 1930s, she and her husband must have counted themselves relatively well off, particularly in comparison with their neighbours in Tonypandy.
+# {{lb|en|intransitive|with ''from'' or sometimes ''of''}} To have as an [[origin]], [[originate]].
+## To have a certain [[social]] [[background]].
+##* '''2011''', Kate Gramich, ''Kate Roberts'', University of Wales Press, {{ISBN|9780708323380}}, chapter 3, {{gbooks|vE2uBwAAQBAJ|46|came}}:
+##*: While Kate Roberts '''came''' from a poor background and, later in life, in the post-Second World War period suffered from severe money shortages, in the early 1930s, she and her husband must have counted themselves relatively well off, particularly in comparison with their neighbours in Tonypandy.
 ## To be or have been a resident or native.
 ##: {{ux|en|Where did you '''come''' from?}}
 ## To have been brought up by or employed by.
 ##: {{ux|en|She '''comes''' from a good family.}}
 ##: {{ux|en|He '''comes''' from a disreputable legal firm.}}
+## To [[begin]] (at a certain location); to [[radiate]] or [[stem]] (from).
+##: {{ux|en|The river '''comes''' from Bear Lake.}}
+##: {{ux|en|Where does this road '''come''' from?}}
 # {{lb|en|intransitive|of ''grain''}} To germinate.
 
 =====Usage notes=====
