--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -15,7 +15,7 @@ From {{etyl|enm|en}} {{m|enm|costen}}, from {{etyl|fro|en}} {{m|fro|coster}}, {{
 ====Verb====
 {{en-verb|costs|costing|cost|past2=costed}}
 
-# To [[incur]] a [[charge]]; to require payment of a [[price]].
+# To [[incur]] a [[charge]] of; to require payment of a (specified) [[price]].
 #: {{ux|en|This shirt '''cost''' $50, while this was cheaper at only $30.}}
 #: {{ux|en|It will '''cost''' you a lot of money to take a trip around the world.}}
 #* {{RQ:BLwnds TLdgr|I|0016}}
