/* Translations */ Added another Latin translation for this word. <substance#51086576>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -78,7 +78,7 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 * Japanese: {{t+|ja|物質|tr=busshitsu}}
 * Khmer: {{t+|km|វត្ថុ|tr=voattʰo’|sc=Khmr}}
 * Korean: {{t+|ko|물질}}
-* Latin: {{t|la|substantia|f}}
+* Latin: {{t|la|substantia|f}}, {{t|la|materia|f}}
 * Latvian: {{t|lv|viela|f}}
 * Maori: {{t|mi|matū}}, {{t|mi|pūmatū}}, {{t|mi|kiko}}
 * Norwegian: {{t|no|substans|m}}, {{t+|no|masse|m}}
