/* Translations */ Corrected format of the Ancient Greek entry. <branch#51095033>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -91,7 +91,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 * Georgian: {{t|ka|შტო|sc=Geor}}
 * German: {{t+|de|Ast|m}}, {{t+|de|Zweig|m}}
 * Greek: {{t+|el|κλαδί|n|sc=Grek}}, {{t+|el|κλαρί|n|sc=Grek}}
-*: Ancient Greek: {{t|grc|κλάδος|m}}
+*: Ancient: {{t|grc|κλάδος|m|sc=polytonic}}
 * Haitian Creole: {{t|ht|branch}}
 * Hebrew: {{t+|he|עָנָף|m|tr=anaf}}
 * Hindi: {{t+|hi|डाल|f|sc=Deva}}, {{t|hi|शाख़|sc=Deva}}, {{t+|hi|शाखा|sc=Deva}}
