--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -24,7 +24,7 @@
 In some late bronze inscriptions, it was also written as a {{Han compound|日|棗|ls=psc|c1=s|c2=p|t1=sun|nocap=1}}, with {{zh-l|*棗}} sometimes simplified as {{zh-l|*朿}}. In ancient texts, {{och-l|蚤}} was often used instead.
 
 ===Etymology===
-Possible cognate found in {{cog|hmx-pro|*ntsi̯ouˣ||early}}, whence {{cog|mww|ntxov}} and {{cog|ium|nziou}} ({{zh-ref|Baxter-Sagart, 2014}}; {{zh-ref|Schuessler, 2007}}), and {{cog|tai-pro|*ɟa:wᶜ||early morning}}, whence {{cog|th|เช้า}} and {{cog|khb|ᦋᧁᧉ}}.
+Possible cognate found in {{cog|hmx-pro|*ntsi̯ouˣ||early}}, whence {{cog|mww|ntxov}} and {{cog|ium|nziou}} ({{zh-ref|Baxter and Sagart, 2014}}; {{zh-ref|Schuessler, 2007}}), and {{cog|tai-pro|*ɟa:wᶜ||early morning}}, whence {{cog|th|เช้า}} and {{cog|khb|ᦋᧁᧉ}}.
 
 ===Pronunciation===
 {{zh-pron
