--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -169,7 +169,7 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 * Friulian: {{t|fur|dret}}
 * German: {{t+|de|gerade}}
 * Greek: {{t+|el|ίσιος|m}}, {{t+|el|ευθύς|m}}
-*: Ancient Greek: {{t|grc|εὐθύς}}, {{t|grc|ὀρθός}}
+*: Ancient: {{t|grc|εὐθύς}}, {{t|grc|ὀρθός}}
 * Hebrew: {{t+|he|יָשָׁר|m|tr=yashár}}
 * Hindi: {{t+|hi|सीधा|tr=sīdhā|sc=Deva}}
 * Hungarian: {{t+|hu|egyenes}}
