--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -54,7 +54,7 @@ Cognate to English {{m|en|basis}}, from PIE via Ancient Greek.
 #: {{ux|en|The pain in his leg '''comes''' and goes.}}
 #* {{rfdate||and other bibliographic particulars}} {{w|Samuel Butler (poet)|Samuel Butler}}, ''{{w|Hudibras}}'':
 #*: when butter does refuse to '''come''' [i.e. to form]
-# {{lb|en|intransitive}} To take a position to something else in a [[sequence]].
+# {{lb|en|intransitive}} To take a position relative to something else in a [[sequence]].
 #: {{ux|en|Which letter '''comes''' before Y?&nbsp;&nbsp; Winter '''comes''' after autumn.}}
 # {{senseid|en|orgasm}}{{lb|en|intransitive|slang}} To achieve [[orgasm]]; to [[cum]]; to [[ejaculate]].
 #* '''2004''', {{w|Alan Hollinghurst}}, ''{{w|The Line of Beauty}}'', Bloomsbury, 2005, Chapter 2:
