--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -155,6 +155,9 @@ Possible cognates include {{cog|ko|별||star}}, {{cog|xgn-pro|*hodu}} and {{cog|
 * {{ja-r|星%星|ほし%ぼし}}, {{ja-r|星%々|ほし%ぼし|[[stars]]}}
 {{der-bottom}}
 
+====Synonyms====
+* {{Star}}:  {{ja-r|籠目|かごめ}}: a [[six]]-[[pointed]] star.  
+
 ====Proper noun====
 {{ja-pos|proper|ほし}}
 
