/* Verb */ can be transitive <branch#51138781>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -332,7 +332,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 # {{lb|en|intransitive}} To produce branches.
 #* '''1944''', {{w|Emily Carr}}, ''{{w|The House of All Sorts}}'', "Life Loves Living," [http://www.gutenberg.net.au/ebooks01/0100121h.html]:
 #*: The tree throve and '''branched''' so heavily that the windows of Lower West and the Doll's Flat were darkened.
-# {{lb|en|intransitive}} To divide into separate parts or subdivisions.
+# {{lb|en|ambitransitive}} To (cause to) divide into separate parts or subdivisions.
 # {{lb|en|intransitive|computing}} To [[jump]] to a [[different]] [[location]] in a [[program]], especially as the result of a [[conditional]] [[statement]].
 
 ====Related terms====
