t+hu:[[szegély]] ([[WT:EDIT|Assisted]]) <skirt#51150459>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -230,6 +230,7 @@
 * Finnish: {{t|fi|reunus}}, {{t+|fi|helma}}
 {{trans-mid}}
 * German: {{t+|de|Saum|m}}
+* Hungarian: {{t+|hu|szegély}}
 * Portuguese: {{t+|pt|borda|f}}
 * Russian: {{t+|ru|грани́ца|f}}
 {{trans-bottom}}
