--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -160,29 +160,29 @@ Other readings: tī - vernacular (may be considered literary, only used in {{zh-
 }}
 
 ====Compounds====
-{{der3|lang=ja|{{ja-r|土地|とち}}: [[ground]], [[land]]
-|{{ja-r|意地悪|いじわる}}
-|{{ja-r|地球|ちきゅう}}
-|{{ja-r|地底|ちてい}}
-|{{ja-r|地理|ちり}}
-|{{ja-r|地盤|ちばん}}
-|{{ja-r|地位|ちい}}
-|{{ja-r|地域|ちいき}}
-|{{ja-r|地下|ちか}}
-|{{ja-r|地学|ちがく}}
-|{{ja-r|地球|ちきゅう}}
-|{{ja-r|地区|ちく}}
-|{{ja-r|地形|ちけい}}
-|{{ja-r|地上|ちじょう}}
-|{{ja-r|地租|ちそ}}
-|{{ja-r|地点|ちてん}}
-|{{ja-r|地主|じぬし}}
-|{{ja-r|地表|ちひょう}}
-|{{ja-r|地方|ちほう}}
-|{{ja-r|地震|じしん}}
-|{{ja-r|天地|てんち}}: heaven and earth
-|{{ja-r|天変地異|てんぺん ち.い}}: [[turmoil]] throughout heaven and earth
-|{{ja-r|現在地|げんざいち}}: current location, you are here
+{{der3|lang=ja|{{ja-r|土%地|と%ち}}: [[ground]], [[land]]
+|{{ja-r|意%地%悪|い%じ%わる}}
+|{{ja-r|地%球|ち%きゅう}}
+|{{ja-r|地%底|ち%てい}}
+|{{ja-r|地%理|ち%り}}
+|{{ja-r|地%盤|ち%ばん}}
+|{{ja-r|地%位|ち%い}}
+|{{ja-r|地%域|ち%いき}}
+|{{ja-r|地%下|ち%か}}
+|{{ja-r|地%学|ち%がく}}
+|{{ja-r|地%球|ち%きゅう}}
+|{{ja-r|地%区|ち%く}}
+|{{ja-r|地%形|ち%けい}}
+|{{ja-r|地%上|ち%じょう}}
+|{{ja-r|地%租|ち%そ}}
+|{{ja-r|地%点|ち%てん}}
+|{{ja-r|地%主|じ%ぬし}}
+|{{ja-r|地%表|ち%ひょう}}
+|{{ja-r|地%方|ち%ほう}}
+|{{ja-r|地%震|じ%しん}}
+|{{ja-r|天%地|てん%ち}}: heaven and earth
+|{{ja-r|天%変 地%異|てん%ぺん ち%い}}: [[turmoil]] throughout heaven and earth
+|{{ja-r|現%在%地|げん%ざい%ち}}: current location, you are here
 }}
 
 ===Etymology 1===
